- versions to archive - pwa enabled

--- a/src/modules/main/components/header/header.component.html
+++ b/src/modules/main/components/header/header.component.html
@@ -4,6 +4,6 @@
       alt="Contagem Regressiva Progressive App"
       src="/assets/images/maskable_icon_x512.svg"
     />    
-    <span class="topTitle">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contagem Regressiva (Progressive App)</span>
+    <span class="topTitle">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contagem Regressiva</span>
       <div class="spacer"></div>
   </div>
