--- a/src/modules/main/components/home/home.component.scss
+++ b/src/modules/main/components/home/home.component.scss
@@ -6,6 +6,9 @@
     background-color: green;
 }
 
+.container {
+    text-align: center;
+}
 .chronosList {
     list-style-type: none;
     margin-block-start:0px!important;
@@ -26,16 +29,16 @@
 }
 
 .lineN2 {
-    font-size: 70px;
+    font-size: 50px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .lineN3 {
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .lineN4 {
-    font-size: 50px;
+    font-size: 30px;
     font-family: 'Courier New', Courier, monospace;
 }
