--- a/src/modules/main/components/home/home.component.scss
+++ b/src/modules/main/components/home/home.component.scss
@@ -42,3 +42,14 @@
     font-size: 30px;
     font-family: 'Courier New', Courier, monospace;
 }
+
+.footer-ads {
+    text-decoration: none;
+    color:yellow;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.footer-ads:hover {
+    text-decoration: none;
+    color:white
+}
