--- a/src/modules/main/components/home/home.component.html
+++ b/src/modules/main/components/home/home.component.html
@@ -1,16 +1,15 @@
-
 <div style="padding: 30px;">
   <div class="container">
       <ul class="chronosList">
-          <li><!--<hr class="solidGreenLine">-->&nbsp;</li>
-          <li class="lineN1"><span id="days">{{ app.days }}</span> dias</li>
-          <li><!--<hr class="dashedGreenLine">-->&nbsp;</li>
-          <li class="lineN2"><span id="hours">{{ app.hours }}</span> horas</li>
-          <li><!--<hr class="dashedGreenLine">-->&nbsp;</li>
-          <li class="lineN3"><span id="minutes">{{ app.minutes }}</span> minutos</li>
-          <li><!--<hr class="dashedGreenLine">-->&nbsp;</li>
-          <li class="lineN4"><span id="seconds">{{ app.seconds }}</span> segundos</li>
-          <li><!--<hr class="solidGreenLine">-->&nbsp;</li>
+          <li>&nbsp;</li>
+          <li class="lineN1">{{ app.days }} dias</li>
+          <li>&nbsp;</li>
+          <li class="lineN2">{{ app.hours }} horas</li>
+          <li>&nbsp;</li>
+          <li class="lineN3">{{ app.minutes }} minutos</li>
+          <li>&nbsp;</li>
+          <li class="lineN4">{{ app.seconds }} segundos</li>
+          <li>&nbsp;</li>
       </ul>
   </div>
 </div>
@@ -27,8 +26,12 @@
   </script>      
 </div>  
 <div>
-<br>
+    <br>
 </div>
 <div style="position: absolute; bottom: 0; left: 0; width: 100%; background-color: green;">
-<span style="color:yellow;font-family: 'Courier New', Courier, monospace;">&copy;&nbsp;Contagem Regressiva</span>
+    <span>
+        <a class="footer-ads" href="https://github.com/avmesquita/countdown-app" target="_blank">
+            &copy;&nbsp;Contagem Regressiva
+        </a>    
+    </span>
 </div>
