--- a/src/modules/main/components/home/home.component.html
+++ b/src/modules/main/components/home/home.component.html
@@ -1,18 +1,4 @@
-<div style="padding: 30px;">
-  <div class="container">
-      <ul class="chronosList">
-          <li>&nbsp;</li>
-          <li class="lineN1">{{ app.days }} dias</li>
-          <li>&nbsp;</li>
-          <li class="lineN2">{{ app.hours }} horas</li>
-          <li>&nbsp;</li>
-          <li class="lineN3">{{ app.minutes }} minutos</li>
-          <li>&nbsp;</li>
-          <li class="lineN4">{{ app.seconds }} segundos</li>
-          <li>&nbsp;</li>
-      </ul>
-  </div>
-</div>
+<app-contagem-regressiva></app-contagem-regressiva>
 <div style="padding-top: 10px;">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5943786919626863"
       crossorigin="anonymous"></script>
