--- a/src/styles.scss
+++ b/src/styles.scss
@@ -290,3 +290,13 @@
       visibility: hidden;
     }
   }
+
+.dark-theme {
+    background-color: black;
+    color:white;
+}
+
+.light-theme {
+    background-color: white;
+    color:black;
+}  
