--- a/src/modules/main/components/header/header.component.html
+++ b/src/modules/main/components/header/header.component.html
@@ -5,5 +5,14 @@
       src="/assets/images/maskable_icon_x512.svg"
     />    
     <span class="topTitle">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contagem Regressiva</span>
-      <div class="spacer"></div>
-  </div>
+    <div class="spacer"></div>    
+    <a (click)="changeTheme($event)">
+      <img
+        width="40"
+        alt="Change Theme"
+        title="Change Theme"
+        src="/assets/icons/dark-theme.svg"
+        style="margin-right: 20px;cursor: pointer;"
+        />
+      </a>
+</div>
