--- a/src/modules/main/components/main/main.component.html
+++ b/src/modules/main/components/main/main.component.html
@@ -3,4 +3,5 @@
   <div class="content" role="main" [ngClass]="isThemeIsLight() ? 'light-theme' : 'dark-theme' ">
     <router-outlet></router-outlet>
   </div>
+  <app-gdpr></app-gdpr>
 </div>
