Data lida a partir de ficheiro

--- a/src/modules/main/components/home/home.component.scss
+++ b/src/modules/main/components/home/home.component.scss
@@ -45,7 +45,7 @@
 
 .footer-ads {
     text-decoration: none;
-    color:yellow;
+    color: yellowgreen;
     font-family: 'Courier New', Courier, monospace;
 }
 
