--- a/src/modules/main/components/header/header.component.scss
+++ b/src/modules/main/components/header/header.component.scss
@@ -1,5 +1,5 @@
 .topTitle {
-    color:yellow;
+    color: yellowgreen;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: larger;
 }
