countdown dates array

--- a/src/modules/main/components/gdpr/gdpr.component.html
+++ b/src/modules/main/components/gdpr/gdpr.component.html
@@ -1,4 +1,4 @@
 <div class="gdpr-dialog" *ngIf="isNaoAceito()">
-    <p>Este site possui armazenamento local de recursos e cookies de terceiros.</p>
-    <button (click)="aceito($event)">Aceito</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button (click)="naoAceito($event)">Não Aceito</button>
+    <p>This site has local resource storage and third-party cookies.</p>
+    <button (click)="aceito($event)">Accept</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button (click)="naoAceito($event)">Do not accept</button>
 </div>
