--- a/src/modules/main/components/header/header.component.html
+++ b/src/modules/main/components/header/header.component.html
@@ -4,7 +4,7 @@
       alt="Contagem Regressiva Progressive App"
       src="/assets/images/maskable_icon_x512.svg"
     />    
-    <span class="topTitle">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contagem Regressiva</span>
+    <span class="topTitle">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Countdown App</b></span>
     <div class="spacer"></div>    
     <a (click)="changeTheme($event)">
       <img
