--- a/src/modules/main/components/home/home.component.html
+++ b/src/modules/main/components/home/home.component.html
@@ -1,8 +1,8 @@
 <app-contagem-regressiva></app-contagem-regressiva>
+<!--
 <div style="padding-top: 10px;">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5943786919626863"
-      crossorigin="anonymous"></script>
-  <!-- Countdown-Ads -->
+      crossorigin="anonymous"></script>  
   <ins class="adsbygoogle"
       style="display:inline-block;max-width:300px;max-height:300px"
       data-ad-client="ca-pub-5943786919626863"
@@ -14,10 +14,11 @@
 <div>
     <br>
 </div>
+-->
 <div style="position: absolute; bottom: 0; left: 0; width: 100%; background-color: green;">
     <span>
         <a class="footer-ads" href="https://github.com/avmesquita/countdown-app" target="_blank">
-            &copy;&nbsp;Contagem Regressiva
+            &copy;&nbsp;Countdown - Andre Mesquita
         </a>    
     </span>
 </div>
