--- a/src/modules/main/components/contagem-regressiva/contagem-regressiva.component.html
+++ b/src/modules/main/components/contagem-regressiva/contagem-regressiva.component.html
@@ -2,13 +2,13 @@
     <div class="container">
         <ul class="chronosList">
             <li>&nbsp;</li>
-            <li class="lineN1">{{ service.app.days }} dias</li>
+            <li class="lineN1">{{ service.app.days }} {{ service.app.days > 1 ? 'days' : 'day' }}</li>
             <li>&nbsp;</li>
-            <li class="lineN2">{{ service.app.hours }} horas</li>
+            <li class="lineN2">{{ service.app.hours }} {{ service.app.hours > 1 ? 'hours' : 'hour' }}</li>
             <li>&nbsp;</li>
-            <li class="lineN3">{{ service.app.minutes }} minutos</li>
+            <li class="lineN3">{{ service.app.minutes }} {{ service.app.minutes > 1 ? 'minutes' : 'minute' }}</li>
             <li>&nbsp;</li>
-            <li class="lineN4">{{ service.app.seconds }} segundos</li>
+            <li class="lineN4">{{ service.app.seconds }} {{ service.app.seconds > 1 ? 'seconds' : 'second' }}</li>
             <li>&nbsp;</li>
         </ul>
     </div>
